--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Project</title>
+    <link rel="stylesheet" href="./css/1-gallery.css" />
+    <link rel="stylesheet" href="./css/2-form.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
     <main>
       <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <load src="./1-gallery.html" />
+      <load src="./2-form.html" />
     </main>
 
-    <load src="./partials/footer.html" />
-
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/1-gallery.js"></script>
+    <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
