--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project</title>
-    <link rel="stylesheet" href="./css/1-gallery.css" />
-    <link rel="stylesheet" href="./css/2-form.css" />
+    <link rel="stylesheet" href="/css/1-gallery.css" />
+    <link rel="stylesheet" href="/css/2-form.css" />
   </head>
   <body>
     <main>
@@ -14,7 +14,7 @@
       <load src="./2-form.html" />
     </main>
 
-    <script type="module" src="./js/1-gallery.js"></script>
-    <script type="module" src="./js/2-form.js"></script>
+    <script type="module" src="/js/1-gallery.js"></script>
+    <script type="module" src="/js/2-form.js"></script>
   </body>
 </html>
