--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project</title>
-    <link rel="stylesheet" href="/css/1-gallery.css" />
-    <link rel="stylesheet" href="/css/2-form.css" />
-  </head>
-  <body>
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./1-gallery.html" />
-      <load src="./2-form.html" />
-    </main>
 
-    <script type="module" src="/js/1-gallery.js"></script>
-    <script type="module" src="/js/2-form.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Project</title>
+  <link rel="stylesheet" href="/src/css/styles.css" />
+</head>
+
+<body>
+  <main>
+    <!-- Loads the specified .html file -->
+    <load src="./1-gallery.html" />
+    <load src="./2-form.html" />
+  </main>
+
+  <script type="module" src="/js/1-gallery.js"></script>
+  <script type="module" src="/js/2-form.js"></script>
+</body>
+
 </html>
+
