--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project</title>
-  <link rel="stylesheet" href="/src/css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
   <main>
     <!-- Loads the specified .html file -->
-    <load src="./1-gallery.html" />
-    <load src="./2-form.html" />
+    <load src="/1-gallery.html" />
+    <load src="/2-form.html" />
   </main>
 
   <script type="module" src="/js/1-gallery.js"></script>
